--- a/ordermanager/src/app/app.component.html
+++ b/ordermanager/src/app/app.component.html
@@ -1,6 +1,19 @@
 
-<div class="grid grid-rows-3">
-  <div class="app-header" >
+<div class="flex flex-col justify-between h-screen">
+  <header class="app-header" >
 
-  </div>
+  </header>
+
+  <main >
+     <div class="app-filters">
+
+     </div>
+     <div class="app-catalog">
+
+     </div>
+  </main>
+
+  <footer class="app-footer">
+
+  </footer>
 </div>
